--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -1,10 +1,6 @@
 #about {
   background-color: $primary-color;
-  background-image: linear-gradient(
-    135deg,
-    $primary-color 0%,
-    $secondary-color 100%
-  );
+  background: linear-gradient(132deg, #FC415A, #591BC5, #212335);
   color: $white-color;
   height: 100%;
   border-top: 0px;
