--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -1,5 +1,10 @@
 #projects {
   background-color: $white-color;
+
+  background: url("/src/assets/background.jpg");
+  background-position: center;
+  background-size: cover;
+
   color: $dark-blue-text;
   margin-top: -15rem;
   padding-top: 15rem;
