--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -1,9 +1,9 @@
 #projects {
   background-color: $white-color;
 
-  background: url("/src/assets/background.jpg");
+  background: url("../images/background.jpg");
+  background-repeat: repeat-y;
   background-position: center;
-  background-size: cover;
 
   color: $dark-blue-text;
   margin-top: -15rem;
